Working on my resume.

--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -53,15 +53,15 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
-\name{Byungjin}{Park}
-\position{Software Architect{\enskip\cdotp\enskip}Security Expert}
-\address{42-8, Bangbae-ro 15-gil, Seocho-gu, Seoul, 00681, Rep. of KOREA}
+\name{Nicholas}{Butts}
+\position{Staff Research Engineer{\enskip\cdotp\enskip}Embedded System Expert}
+\address{908 7th St. East, West Fargo, ND 58078, USA}
 
-\mobile{(+82) 10-9030-1843}
-\email{posquit0.bj@gmail.com}
-\homepage{www.posquit0.com}
-\github{posquit0}
-\linkedin{posquit0}
+\mobile{(701) 371-3358}
+\email{nlbutts@ieee.org}
+\homepage{qnibbles.wordpress.com}
+\github{nlbutts}
+\linkedin{nicholas-butts-1a456569}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
@@ -73,7 +73,7 @@
 % \googlescholar{googlescholar-id}{}
 % \extrainfo{extra informations}
 
-\quote{``Be the change that you want to see in the world."}
+\quote{``A good scientist is a person with original ideas. A good engineer is a person who makes a design that works with as few ideas as possible. There are no prima donnas in engineering."}
 
 
 %-------------------------------------------------------------------------------
@@ -87,7 +87,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Byungjin Park~~~·~~~Résumé}
+  {Nicholas Butts~~~·~~~Résumé}
   {\thepage}
 
 
@@ -99,8 +99,8 @@
 \input{resume/experience.tex}
 \input{resume/honors.tex}
 \input{resume/presentation.tex}
-\input{resume/writing.tex}
-\input{resume/committees.tex}
+%\input{resume/writing.tex}
+%\input{resume/committees.tex}
 \input{resume/education.tex}
 \input{resume/extracurricular.tex}
 
