--- a/examples/resume/education.tex
+++ b/examples/resume/education.tex
@@ -11,15 +11,27 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - Aug. 2017} % Date(s)
+    {B.S. in Electrical Engineering} % Degree
+    {NDSU(North Dakota State University)} % Institution
+    {Fargo, ND} % Location
+    {Aug. 1995 - May. 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
       \end{cvitems}
     }
+
+%---------------------------------------------------------
+  \cventry
+    {M.S. in Electrical Engineering} % Degree
+    {NDSU(North Dakota State University)} % Institution
+    {Fargo, ND} % Location
+    {Aug. 2001 - May. 2007} % Date(s)
+    {
+      \begin{cvitems} % Description(s) bullet points
+        \item {Controller Area Network Condition Monitoring and Bus Health on In-Vehicle Communications Networks}
+      \end{cvitems}
+    }
+
 
 %---------------------------------------------------------
 \end{cventries}
