--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -11,91 +11,78 @@
 
 %---------------------------------------------------------
   \cventry
-    {Software Architect} % Job title
-    {Omnious. Co., Ltd.} % Organization
-    {Seoul, S.Korea} % Location
-    {Jun. 2017 - May. 2018} % Date(s)
+    {Chief Engineer Projects, Director Technology Development/Proof-of-Concepts} % Job title
+    {Appareo Systems} % Organization
+    {Fargo, ND} % Location
+    {Jun. 2020 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Provisioned an easily managable hybrid infrastructure(Amazon AWS + On-premise) utilizing IaC(Infrastructure as Code) tools like Ansible, Packer and Terraform.}
-        \item {Built fully automated CI/CD pipelines on CircleCI for containerized applications using Docker, AWS ECR and Rancher.}
-        \item {Designed an overall service architecture and pipelines of the Machine Learning based Fashion Tagging API SaaS product with the micro-services architecture.}
-        \item {Implemented several API microservices in Node.js Koa and in the serverless AWS Lambda functions.}
-        \item {Deployed a centralized logging environment(ELK, Filebeat, CloudWatch, S3) which gather log data from docker containers and AWS resources.}
-        \item {Deployed a centralized monitoring environment(Grafana, InfluxDB, CollectD) which gather system metrics as well as docker run-time metrics.}
+        \item {Technical lead and lead embedded software engineer on an AI enabled rugged aviation camera that used the NVidia Jetson Nano platform, 4K imaging, and Deep Neural Networks (DNN) for cockpit gauge recognition utilizing C/C++, Python, Tensorflow, and TensorRT.}
+      \end{cvitems}
+    }
+
+
+%---------------------------------------------------------
+  \cventry
+    {Staff Research Engineer} % Job title
+    {Appareo Systems} % Organization
+    {Fargo, ND} % Location
+    {Jun. 2017 - Jun 2020} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Project lead on a complex multi-radio communications Gateway for Northrop Grumman that utilized Iridium, OpenThread, Trellisware, and ultrawideband radio technologies developed in C/C++.}
+        \item {Technical lead on a real-time embedded sensing module for liquid flow pressure and volume monitoring for agricultural sprayers utilizing C/C++, CAN, and J1939.}
+        \item {Architectured a complex real-time embedded control module to control drop-let size and flow rate on smart liquid nozzles for agricultural sprayers utilizing C/C++, CAN, J1939, and ISO 11783.}
+        \item {Studied advanced acoustic designs for individual seed counting in air seeder applications. Created proof-of-concept hardware platforms for data acquisition and advanced signal processing algorithm to count seeds and separate singles from double impacts.}
+        \item {Researched, designed, built, and tested a 2.4 GHz Frequency Modulated Continuous Wave radar for under crop canopy obstacle detection utilizing C/C++ and Python.}
+        \item {Technical lead a Emergency Use Authorization COVVID 19 mechanical resuscitator that was designed, fabricated, and tested in three weeks.}
+        \item {Research on various acoustic electro/mechanical conduction means for seed counting.}
+        \item {Designed, built, and tested an innovative low light 360 degree underwater camera for fisherman utilizing C/C++ and Python.}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
-    {Co-founder \& Software Engineer} % Job title
-    {PLAT Corp.} % Organization
-    {Seoul, S.Korea} % Location
+    {Embedded Software Architect} % Job title
+    {Appareo Systems} % Organization
+    {Fargo, ND} % Location
     {Jan. 2016 - Jun. 2017} % Date(s)
-    {
+    {.
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Implemented RESTful API server for car rental booking application(CARPLAT in Google Play).}
-        \item {Built and deployed overall service infrastructure utilizing Docker container, CircleCI, and several AWS stack(Including EC2, ECS, Route 53, S3, CloudFront, RDS, ElastiCache, IAM), focusing on high-availability, fault tolerance, and auto-scaling.}
-        \item {Developed an easy-to-use Payment module which connects to major PG(Payment Gateway) companies in Korea.}
+        \item {Led team of embedded software engineers, created processes and procedures for company wide New Product Realization Process, guided software architecture on new products, mentored and career pathing of embedded software engineers.}
+        \item {Technical lead on embedded acoustic mass flow detection device mounted inside combine processor/cleaning shoe utilizing C/C++, CAN, and ISO 11783.}
+        \item {Technical lead on embedded grain quality sensor that is mounted on the clean grain elevator. This device utilized acoustic sensing to synchronize high output LED flash and high speed image sensor capture of grain passing through the clean grain elevator then applied computer vision techniques to detect material other than grain and broken grain utilizing C/C++, Python, CAN, Ethernet, and ISO 11783.}
+        \item {Research on autonomous combine operation using advanced acoustic, electro-optical, LIDAR, 24/77 GHz radars sensors and fuzzy logic control systems.}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
-    {Software Engineer \& Security Researcher (Compulsory Military Service)} % Job title
-    {R.O.K Cyber Command, MND} % Organization
-    {Seoul, S.Korea} % Location
-    {Aug. 2014 - Apr. 2016} % Date(s)
+    {Senior Embedded Software Engineer} % Job title
+    {Appareo Systems} % Organization
+    {Fargo, ND} % Location
+    {May. 2010 - Jan. 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Lead engineer on agent-less backtracking system that can discover client device's fingerprint(including public and private IP) independently of the Proxy, VPN and NAT.}
-        \item {Implemented a distributed web stress test tool with high anonymity.}
-        \item {Implemented a military cooperation system which is web based real time messenger in Scala on Lift.}
+        \item {Lead embedded software engineer on Stratus 2 portable ADS-B receiver. Wrote C/C++ code to interface with FPGA software defined radio, packet decode, power sequencing, firmware upgrading, and data recording.}
+        \item {Lead embedded software engineer on Stratus 1 portable ADS-B receiver. Wrote C/C++ code to interface with FPGA software defined radio, packet decode, power sequencing, firmware upgrading.}
+        \item {Lead embedded software engineer on cockpit crash recorder for light helicopters and fixed wing aircraft, implemented and optimized image pipeline and robust, fail-safe data recording and recovery utilizing C/C++}
+        \item {Embedded Software Engineer on cockpit camera system for Bell helicopters.}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
-    {Game Developer Intern at Global Internship Program} % Job title
-    {NEXON} % Organization
-    {Seoul, S.Korea \& LA, U.S.A} % Location
-    {Jan. 2013 - Feb. 2013} % Date(s)
+    {Senior Software Engineer} % Job title
+    {John Deere Electronic Solutions} % Organization
+    {Fargo, ND} % Location
+    {2005 - May. 2010} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed in Cocos2d-x an action puzzle game(Dragon Buster) targeting U.S. market.}
-        \item {Implemented API server which is communicating with game client and In-App Store, along with two other team members who wrote the game logic and designed game graphics.}
-        \item {Won the 2nd prize in final evaluation.}
+        \item {Software lead on various rugged embedded systems: high end Windows CE displays, bare-metal embedded displays, transmission shift controllers, hydraulic controllers, center pivot control electronics.}
+        \item {Researched new technologies and processors.}
+        \item {Member of the Software Engineering Process Group and the Software Reuse library.}
       \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer} % Job title
-    {ShitOne Corp.} % Organization
-    {Seoul, S.Korea} % Location
-    {Dec. 2011 - Feb. 2012} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed a proxy drive smartphone application which connects proxy driver and customer.}
-        \item {Implemented overall Android application logic and wrote API server for community service, along with lead engineer who designed bidding protocol on raw socket and implemented API server for bidding.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Freelance Penetration Tester} % Job title
-    {SAMSUNG Electronics} % Organization
-    {S.Korea} % Location
-    {Sep. 2013, Mar. 2011 - Oct. 2011} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Conducted penetration testing on SAMSUNG KNOX, which is solution for enterprise mobile security.}
-        \item {Conducted penetration testing on SAMSUNG Smart TV.}
-      \end{cvitems}
-      %\begin{cvsubentries}
-      %  \cvsubentry{}{KNOX(Solution for Enterprise Mobile Security) Penetration Testing}{Sep. 2013}{}
-      %  \cvsubentry{}{Smart TV Penetration Testing}{Mar. 2011 - Oct. 2011}{}
-      %\end{cvsubentries}
     }
 
 %---------------------------------------------------------
