--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -10,5 +10,6 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Current Site Reliability Engineer at start-up company Kasa. 7+ years experience specializing in the backend development, infrastructure automation, and computer hacking/security. Super nerd who loves Vim, Linux and OS X and enjoys to customize all of the development environment. Interested in devising a better problem-solving method for challenging tasks, and learning new technologies and tools if the need arises.
+Current Staff Research Engineer at Appareo Systems. 21 years of experience designing, building, and fielding rugged embedded systems. Passionate, enthusiastic, driven engineer.
+I enjoy all aspects of embedded systems, from system engineering and architecture to embedded software design, code, and testing to electronic design and PCB layout. I've worked with bare-metal deeply embedded control systems to high end Linux based AI camera systems. Enjoy solving complex problems and continuously learning new technologies and tools.
 \end{cvparagraph}
