--- a/examples/resume/extracurricular.tex
+++ b/examples/resume/extracurricular.tex
@@ -11,29 +11,25 @@
 
 %---------------------------------------------------------
   \cventry
-    {Core Member \& President at 2013} % Affiliation/role
-    {PoApper (Developers' Network of POSTECH)} % Organization/group
-    {Pohang, S.Korea} % Location
-    {Jun. 2010 - Jun. 2017} % Date(s)
+    {Member} % Affiliation/role
+    {IEEE (Institute of Electrical and Electronics Engineers)} % Organization/group
+    {Fargo, ND} % Location
+    {Aug. 2012 - Apr. 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Reformed the society focusing on software engineering and building network on and off campus.}
-        \item {Proposed various marketing and network activities to raise awareness.}
       \end{cvitems}
     }
 
+
 %---------------------------------------------------------
   \cventry
-    {Member} % Affiliation/role
-    {PLUS (Laboratory for UNIX Security in POSTECH)} % Organization/group
-    {Pohang, S.Korea} % Location
-    {Sep. 2010 - Oct. 2011} % Date(s)
+    {Squadron Commander} % Affiliation/role
+    {CAP (Civil Air Patrol)} % Organization/group
+    {Fargo, ND} % Location
+    {Aug. 2012 - Apr. 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Gained expertise in hacking \& security areas, especially about internal of operating system based on UNIX and several exploit techniques.}
-        \item {Participated on several hacking competition and won a good award.}
-        \item {Conducted periodic security checks on overall IT system as a member of POSTECH CERT.}
-        \item {Conducted penetration testing commissioned by national agency and corporation.}
+        \item {Lead group of volenteers, mentoring members on new skills, and education on aerospace.}
       \end{cvitems}
     }
 
