--- a/examples/resume/presentation.tex
+++ b/examples/resume/presentation.tex
@@ -11,26 +11,25 @@
 
 %---------------------------------------------------------
   \cventry
-    {Presenter for <Hosting Web Application for Free utilizing GitHub, Netlify and CloudFlare>} % Role
-    {DevFest Seoul by Google Developer Group Korea} % Event
-    {Seoul, S.Korea} % Location
-    {Nov. 2017} % Date(s)
+    {Presenting Intelligent Grain Quality Sensor} % Role
+    {VDI Smart Farming Conference} % Event
+    {Dusseldorf, Germany} % Location
+    {May. 2018} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Introduced the history of web technology and the JAM stack which is for the modern web application development.}
-        \item {Introduced how to freely host the web application with high performance utilizing global CDN services.}
+        \item {Introduced the AGCO Grain Quality Sensor}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
-    {Presenter for <DEFCON 20th : The way to go to Las Vegas>} % Role
-    {6th CodeEngn (Reverse Engineering Conference)} % Event
-    {Seoul, S.Korea} % Location
-    {Jul. 2012} % Date(s)
+    {Presenting Mass Flow Combine Sensors} % Role
+    {LAND.TECHNIK 2020} % Event
+    {Dusselforf, Germany} % Location
+    {Nov 2017} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Introduced CTF(Capture the Flag) hacking competition and advanced techniques and strategy for CTF}
+        \item {Introduced the AGCO Mass Flow Combine Sensor}
       \end{cvitems}
     }
 
