--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -17,7 +17,7 @@
     {Jun. 2020 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Technical lead and lead embedded software engineer on an AI enabled rugged aviation camera that used the NVidia Jetson Nano platform, 4K imaging, and Deep Neural Networks (DNN) for cockpit gauge recognition utilizing C/C++, Python, Tensorflow, and TensorRT.}
+        \item {Technical lead and lead embedded software engineer on an AI enabled rugged aviation camera that used the NVidia Jetson Nano platform, 4K imaging, and Deep Neural Networks (DNN) for cockpit gauge recognition utilizing Yocto Linux, C/C++, Python, Tensorflow, and TensorRT.}
       \end{cvitems}
     }
 
@@ -30,12 +30,12 @@
     {Jun. 2017 - Jun 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Project lead on a complex multi-radio communications Gateway for Northrop Grumman that utilized Iridium, OpenThread, Trellisware, and ultrawideband radio technologies developed in C/C++.}
+        \item {Project lead on a complex multi-radio communications Gateway for Northrop Grumman that utilized Iridium, OpenThread, Trellisware, and ultrawideband radio technologies developed in Yocto Linux and C/C++.}
         \item {Technical lead on a real-time embedded sensing module for liquid flow pressure and volume monitoring for agricultural sprayers utilizing C/C++, CAN, and J1939.}
-        \item {Architectured a complex real-time embedded control module to control drop-let size and flow rate on smart liquid nozzles for agricultural sprayers utilizing C/C++, CAN, J1939, and ISO 11783.}
+        \item {Architectured a complex real-time embedded control module to control droplet size and flow rate on smart liquid nozzles for agricultural sprayers utilizing C/C++, CAN, J1939, and ISO 11783.}
         \item {Studied advanced acoustic designs for individual seed counting in air seeder applications. Created proof-of-concept hardware platforms for data acquisition and advanced signal processing algorithm to count seeds and separate singles from double impacts.}
         \item {Researched, designed, built, and tested a 2.4 GHz Frequency Modulated Continuous Wave radar for under crop canopy obstacle detection utilizing C/C++ and Python.}
-        \item {Technical lead a Emergency Use Authorization COVVID 19 mechanical resuscitator that was designed, fabricated, and tested in three weeks.}
+        \item {Technical lead of an Emergency Use Authorization COVID 19 mechanical resuscitator that was designed, fabricated, and tested in three weeks.}
         \item {Research on various acoustic electro/mechanical conduction means for seed counting.}
         \item {Designed, built, and tested an innovative low light 360 degree underwater camera for fisherman utilizing C/C++ and Python.}
       \end{cvitems}
@@ -49,7 +49,7 @@
     {Jan. 2016 - Jun. 2017} % Date(s)
     {.
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Led team of embedded software engineers, created processes and procedures for company wide New Product Realization Process, guided software architecture on new products, mentored and career pathing of embedded software engineers.}
+        \item {Led team of embedded software engineers, created processes and procedures for company wide New Product Realization Process, guided software architecture on new products, mentoring and career planning of embedded software engineers.}
         \item {Technical lead on embedded acoustic mass flow detection device mounted inside combine processor/cleaning shoe utilizing C/C++, CAN, and ISO 11783.}
         \item {Technical lead on embedded grain quality sensor that is mounted on the clean grain elevator. This device utilized acoustic sensing to synchronize high output LED flash and high speed image sensor capture of grain passing through the clean grain elevator then applied computer vision techniques to detect material other than grain and broken grain utilizing C/C++, Python, CAN, Ethernet, and ISO 11783.}
         \item {Research on autonomous combine operation using advanced acoustic, electro-optical, LIDAR, 24/77 GHz radars sensors and fuzzy logic control systems.}
@@ -64,9 +64,9 @@
     {May. 2010 - Jan. 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Lead embedded software engineer on Stratus 2 portable ADS-B receiver. Wrote C/C++ code to interface with FPGA software defined radio, packet decode, power sequencing, firmware upgrading, and data recording.}
-        \item {Lead embedded software engineer on Stratus 1 portable ADS-B receiver. Wrote C/C++ code to interface with FPGA software defined radio, packet decode, power sequencing, firmware upgrading.}
-        \item {Lead embedded software engineer on cockpit crash recorder for light helicopters and fixed wing aircraft, implemented and optimized image pipeline and robust, fail-safe data recording and recovery utilizing C/C++}
+        \item {Embedded software engineer on Stratus 2 portable ADS-B receiver. Wrote C/C++ code to interface with FPGA software defined radio, packet decode, power sequencing, firmware upgrading, and data recording.}
+        \item {Embedded software engineer on Stratus 1 portable ADS-B receiver. Wrote C/C++ code to interface with FPGA software defined radio, packet decode, power sequencing, firmware upgrading.}
+        \item {Embedded software engineer on cockpit crash recorder for light helicopters and fixed wing aircraft, implemented and optimized image pipeline and robust, fail-safe data recording and recovery utilizing C/C++}
         \item {Embedded Software Engineer on cockpit camera system for Bell helicopters.}
       \end{cvitems}
     }
@@ -76,12 +76,13 @@
     {Senior Software Engineer} % Job title
     {John Deere Electronic Solutions} % Organization
     {Fargo, ND} % Location
-    {2005 - May. 2010} % Date(s)
+    {May 2000 - May. 2010} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Software lead on various rugged embedded systems: high end Windows CE displays, bare-metal embedded displays, transmission shift controllers, hydraulic controllers, center pivot control electronics.}
         \item {Researched new technologies and processors.}
         \item {Member of the Software Engineering Process Group and the Software Reuse library.}
+        \item {Researched utilizing FPGA as a replacement for obsolete processors.}
       \end{cvitems}
     }
 
