--- a/examples/resume/presentation.tex
+++ b/examples/resume/presentation.tex
@@ -13,11 +13,10 @@
   \cventry
     {Presenting Intelligent Grain Quality Sensor} % Role
     {VDI Smart Farming Conference} % Event
-    {Dusseldorf, Germany} % Location
+    {Düsseldorf, Germany} % Location
     {May. 2018} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Introduced the AGCO Grain Quality Sensor}
       \end{cvitems}
     }
 
@@ -25,11 +24,10 @@
   \cventry
     {Presenting Mass Flow Combine Sensors} % Role
     {LAND.TECHNIK 2020} % Event
-    {Dusselforf, Germany} % Location
+    {Hannover, Germany} % Location
     {Nov 2017} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Introduced the AGCO Mass Flow Combine Sensor}
       \end{cvitems}
     }
 
