--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -96,8 +96,9 @@
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
 \input{resume/summary.tex}
+\input{resume/skills.tex}
 \input{resume/experience.tex}
-\input{resume/honors.tex}
+\input{resume/patents.tex}
 \input{resume/presentation.tex}
 %\input{resume/writing.tex}
 %\input{resume/committees.tex}
