Fixed job title.

--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -54,7 +54,7 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Nicholas}{Butts}
-\position{Staff Research Engineer{\enskip\cdotp\enskip}Embedded System Expert}
+\position{Chief Engineer Projects, Director Technology Development/Proof-of-Concepts{\enskip\cdotp\enskip}Embedded System Expert}
 \address{908 7th St. East, West Fargo, ND 58078, USA}
 
 \mobile{(701) 371-3358}
