Made some minor tweaks.

--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -49,7 +49,7 @@
     {Jan. 2016 - Jun. 2017} % Date(s)
     {.
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Led team of embedded software engineers, created processes and procedures for company wide New Product Realization Process, guided software architecture on new products, mentoring and career planning of embedded software engineers.}
+        \item {Lead team of embedded software engineers, created processes and procedures for company wide New Product Realization Process, guided software architecture on new products, mentoring and career planning of embedded software engineers.}
         \item {Technical lead on embedded acoustic mass flow detection device mounted inside combine processor/cleaning shoe utilizing C/C++, CAN, and ISO 11783.}
         \item {Technical lead on embedded grain quality sensor that is mounted on the clean grain elevator. This device utilized acoustic sensing to synchronize high output LED flash and high speed image sensor capture of grain passing through the clean grain elevator then applied computer vision techniques to detect material other than grain and broken grain utilizing C/C++, Python, CAN, Ethernet, and ISO 11783.}
         \item {Research on autonomous combine operation using advanced acoustic, electro-optical, LIDAR, 24/77 GHz radars sensors and fuzzy logic control systems.}
@@ -64,10 +64,8 @@
     {May. 2010 - Jan. 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Embedded software engineer on Stratus 2 portable ADS-B receiver. Wrote C/C++ code to interface with FPGA software defined radio, packet decode, power sequencing, firmware upgrading, and data recording.}
-        \item {Embedded software engineer on Stratus 1 portable ADS-B receiver. Wrote C/C++ code to interface with FPGA software defined radio, packet decode, power sequencing, firmware upgrading.}
-        \item {Embedded software engineer on cockpit crash recorder for light helicopters and fixed wing aircraft, implemented and optimized image pipeline and robust, fail-safe data recording and recovery utilizing C/C++}
-        \item {Embedded Software Engineer on cockpit camera system for Bell helicopters.}
+        \item {Embedded software engineer on Stratus 1 and 2 portable ADS-B receiver. Wrote C/C++ code to interface with FPGA software defined radio, packet decode, power sequencing, firmware upgrading, and data recording.}
+        \item {Embedded software engineer on several cockpit crash recorder for light helicopters and fixed wing aircraft, implemented and optimized image pipeline and robust, fail-safe data recording and recovery utilizing C/C++}
       \end{cvitems}
     }
 
