--- a/examples/resume/extracurricular.tex
+++ b/examples/resume/extracurricular.tex
@@ -13,13 +13,12 @@
   \cventry
     {Member} % Affiliation/role
     {IEEE (Institute of Electrical and Electronics Engineers)} % Organization/group
-    {Fargo, ND} % Location
-    {Aug. 2012 - Apr. 2020} % Date(s)
+    {} % Location
+    {} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
       \end{cvitems}
     }
-
 
 %---------------------------------------------------------
   \cventry
@@ -30,6 +29,16 @@
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
         \item {Lead group of volenteers, mentoring members on new skills, and education on aerospace.}
+      \end{cvitems}
+    }
+
+  \cventry
+    {Eagle Scout} % Affiliation/role
+    {Boy Scouts of America} % Organization/group
+    {Fargo, ND} % Location
+    {} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of experience/contributions/knowledge
       \end{cvitems}
     }
 
