--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -14,11 +14,11 @@
     {Languages} % type
     {C, C++, Python, C\#, Bash, Matlab, Perl} % skill
   \cvskill
-    {OS/Frameworks} % type
+    {OS} % type
     {Yocto Linux, Ubuntu Linux, Windows, Windows CE, Nucleous, FreeRTOS, Bare Metal} % skill
   \cvskill
     {Frameworks} % type
-    {OpenCV, Tensorflow, Keras, Matplotlib, Pandas, Numpy, SciPy, Protobuf, Google Test, Google Mock} % skill
+    {OpenCV, Tensorflow, Keras, Matplotlib, Pandas, Numpy, SciPy, Protobuf, Google Test, Google Mock, GStreamer} % skill
   \cvskill
     {Networks} % type
     {TCP/IP, ZMQ, CAN, J1939, ISO-11783, Custom protocols} % skill
