Updated based on feedback.

--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -73,7 +73,7 @@
 % \googlescholar{googlescholar-id}{}
 % \extrainfo{extra informations}
 
-\quote{``A good scientist is a person with original ideas. A good engineer is a person who makes a design that works with as few ideas as possible. There are no prima donnas in engineering."}
+%\quote{``A good scientist is a person with original ideas. A good engineer is a person who makes a design that works with as few ideas as possible. There are no prima donnas in engineering."}
 
 
 %-------------------------------------------------------------------------------
