--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -36,7 +36,7 @@
         \item {Studied advanced acoustic designs for individual seed counting in air seeder applications. Created proof-of-concept hardware platforms for data acquisition and advanced signal processing algorithm to count seeds and separate singles from double impacts.}
         \item {Researched, designed, built, and tested a 2.4 GHz Frequency Modulated Continuous Wave radar for under crop canopy obstacle detection utilizing C/C++ and Python.}
         \item {Technical lead of an Emergency Use Authorization COVID 19 mechanical resuscitator that was designed, fabricated, and tested in three weeks.}
-        \item {Research on various acoustic electro/mechanical conduction means for seed counting.}
+        \item {Researched on various acoustic electro/mechanical conduction means for seed counting.}
         \item {Designed, built, and tested an innovative low light 360 degree underwater camera for fisherman utilizing C/C++ and Python.}
       \end{cvitems}
     }
@@ -49,10 +49,10 @@
     {Jan. 2016 - Jun. 2017} % Date(s)
     {.
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Lead team of embedded software engineers, created processes and procedures for company wide New Product Realization Process, guided software architecture on new products, mentoring and career planning of embedded software engineers.}
+        \item {Lead team of embedded software engineers, created processes and procedures for company wide New Product Realization Process, guided software architecture on new products, mentored embedded software engineers.}
         \item {Technical lead on embedded acoustic mass flow detection device mounted inside combine processor/cleaning shoe utilizing C/C++, CAN, and ISO 11783.}
-        \item {Technical lead on embedded grain quality sensor that is mounted on the clean grain elevator. This device utilized acoustic sensing to synchronize high output LED flash and high speed image sensor capture of grain passing through the clean grain elevator then applied computer vision techniques to detect material other than grain and broken grain utilizing C/C++, Python, CAN, Ethernet, and ISO 11783.}
-        \item {Research on autonomous combine operation using advanced acoustic, electro-optical, LIDAR, 24/77 GHz radars sensors and fuzzy logic control systems.}
+        \item {Technical lead on embedded grain quality sensor that is mounted on the clean grain elevator. This device utilized acoustic sensing to synchronize high output LED flash and a high speed image sensor capture of grain passing through the clean grain elevator. Then it applied computer vision techniques to detect material other than grain and broken grain utilizing C/C++, Python, CAN, Ethernet, and ISO 11783.}
+        \item {Researched on autonomous combine operation using advanced acoustic, electro-optical, LIDAR, 24/77 GHz radars sensors and fuzzy logic control systems.}
       \end{cvitems}
     }
 
@@ -65,7 +65,7 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Embedded software engineer on Stratus 1 and 2 portable ADS-B receiver. Wrote C/C++ code to interface with FPGA software defined radio, packet decode, power sequencing, firmware upgrading, and data recording.}
-        \item {Embedded software engineer on several cockpit crash recorder for light helicopters and fixed wing aircraft, implemented and optimized image pipeline and robust, fail-safe data recording and recovery utilizing C/C++}
+        \item {Embedded software engineer on several cockpit crash recorders for light helicopters and fixed wing aircraft, implemented and optimized image pipeline and robust, fail-safe data recording and recovery utilizing C/C++}
       \end{cvitems}
     }
 
