--- a/examples/resume/extracurricular.tex
+++ b/examples/resume/extracurricular.tex
@@ -42,5 +42,18 @@
       \end{cvitems}
     }
 
+  \cventry
+    {Core Award} % Affiliation/role
+    {Appareo Systems} % Organization/group
+    {Fargo, ND} % Location
+    {} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of experience/contributions/knowledge
+        \item {2020 Pushing the boundaries of what is possible}
+        \item {2016 Pushing the boundaries of what is possible}
+        \item {2012 Pushing the boundaries of what is possible}
+      \end{cvitems}
+    }
+
 %---------------------------------------------------------
 \end{cventries}
