--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -11,5 +11,5 @@
 
 %---------------------------------------------------------
 Current Chief Engineer Projects, Directory of Technology Development/Proof of Concepts at Appareo Systems. 21 years of experience designing, building, and fielding rugged embedded systems. Passionate, enthusiastic, driven engineer.
-I enjoy all aspects of embedded systems, from system engineering and architecture to embedded software design, code, and testing to electronics design and PCB layout. I've worked with bare-metal deeply embedded control systems to high end Linux based AI camera systems. I Enjoy solving complex problems with an innovative and driven team. I push myself to continuously learn new technologies and tools.
+I enjoy all aspects of embedded systems, from system engineering and architecture to embedded software design, from code and testing to electronics design and PCB layout. I've worked with bare-metal deeply embedded control systems to high end Linux based AI camera systems. I enjoy solving complex problems with an innovative and driven team. I push myself to continuously learn new technologies and tools.
 \end{cvparagraph}
